fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,16 +81,16 @@
     --card-border-rgb: 131, 134, 135;
   }
 
-  * {
+  /* * {
     scrollbar-gutter: stable;
-  }
+  } */
 }
 
 /* scroll bar color for desktop */
 @media (min-width: 768px) {
   /* For the scrollbar itself */
   ::-webkit-scrollbar {
-    width: 8px; /* width of the entire scrollbar */
+    width: 0px; /* width of the entire scrollbar */
   }
 
   /* For the scrollbar track (the part the scrollbar "slides" on) */
